--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = "^3.6"
-django = "^3.0.5"
+django = ">=3.0.5"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^3.7.9"
